# gathers

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  test.csv
.github/workflows/: docker-image.yml
benches/: Cargo.toml
benches/src/: card_search_benchmark.rs  csv_import_benchmark.rs
cli/: Cargo.toml
cli/src/: main.rs
data/: pokemon_test.csv  riftbound.db  test.csv  testPrintings.db
docs/: card-price-tracking-plan.md  cli.md  docker-setup.md  index.md  quick-search-card-controls-plan.md  server-webui-setup.md
docs/superpowers/plans/: 2026-05-12-camera-card-scan.md
docs/superpowers/specs/: 2026-05-11-mobile-search-and-card-sheet-design.md  2026-05-11-mobile-ui-pass-design.md  2026-05-12-camera-card-scan-design.md  2026-05-12-multi-select-cards-design.md  2026-05-12-sub-collections-design.md
gathers/: Cargo.toml
gathers/src/: main.rs
models/: Cargo.toml
models/src/: filters.rs  lib.rs  mtg.rs  pokemon.rs  riftbound.rs
persistence/: Cargo.toml
persistence/migrations/01-collections/: up.sql
persistence/migrations/02-cards-timeupdated/: up.sql
persistence/migrations/03-card-price-tracking/: up.sql
persistence/migrations/04-collection-proxy/: up.sql
persistence/migrations/05-sub-collections/: up.sql
persistence/src/: csv_models.rs  lib.rs
persistence/src/sqlite/: mod.rs
retrieval/: Cargo.toml
retrieval/src/: lib.rs
retrieval/src/systems/: dummy.rs  mod.rs  scryfall.rs  sqlite.rs
retrieval/src/systems/pokemon/: mod.rs  models.rs
retrieval/src/systems/pokemon/scraper/: common.rs  db.rs  mod.rs  models.rs
retrieval/src/systems/pokemon/scraper/scrapers/: mod.rs  serebii.rs  tcgp.rs
retrieval/src/systems/riftsqlite/: mod.rs  models.rs  update.rs
retrieval/src/systems/scryfall/: mod.rs
retrieval/src/systems/sqlite/: mod.rs  models.rs
server/: Cargo.toml
server/src/: collections.rs  main.rs  mtg_api.rs  pokemon_api.rs  prices.rs  riftbound_api.rs
server/src/collections/: collections_models.rs
server/src/mtg_api/: mtg_api_models.rs
server/src/pokemon_api/: pokemon_api_models.rs
server/src/riftbound_api/: riftbound_api_models.rs
src/: main.rs
webui/: Dockerfile  nginx.conf  package-lock.json  package.json
webui/public/: index.html
webui/src/: BaseApp.js  NavigationDestinations.test.js  OperationsContext.js  OperationsContext.test.js  index.css  index.js  setupProxy.js
webui/src/Components/: AddCollectionForm.js  AddCollectionForm.test.js  Card.js  CardDetails.js  CardDetails.test.js  CardList.js  CardListNav.js  CardListNav.test.js  CardShell.js  CollectionContext.js  CollectionFilterBar.js  CollectionFilterBar.test.js  CollectionStats.js  MobileCollectionView.js  MobileSearchView.js  MoveToDialog.js  PokemonCard.js  QuickSearchContext.js  QuickSearchModal.js  RiftboundCard.js  Search.js  Search.test.js  SearchMagic.js  SearchPagination.js  SearchPokemon.js  SearchRiftbound.js  SelectionActionBar.js  SettingsModal.js  SettingsModal.test.js  Sidebar.js  SortControls.js  SystemTypeContext.js  TopBar.js  bulkSearch.js  bulkSearch.test.js  priceUtils.js  searchPrintings.js  searchPrintings.test.js  useCardSearch.js
webui/src/Components/CardListContexts/: CardCacheContext.js  CardLoaderContext.js  CardLoaderContext.test.js  CardsContext.js  RefreshCardListContext.js  SelectedCardsContext.js
webui/src/Components/CardListNavButtons/: CollectionProxyToggle.js  ConfirmCollectionDelete.js  DeleteCards.js  DeleteCollection.js  ExportCollection.js  ImportCards.js  ImportCards.test.js  MoveCards.js  OperationsTracker.js  OperationsTracker.test.js  ProxyCards.js  QuickSearch.js  RenameCollection.js  SelectionTracker.js
webui/src/Components/Layout/: Header.js
webui/src/Components/ReusableConstants/: CardSets.js
webui/src/Views/: CardDetailLayout.js  CardDetailLayout.test.js  CardListView.js  CardListView.test.js  DuplicateCollectionsView.js  DuplicateCollectionsView.test.js  MtgCardDetailView.js  PokemonCardDetailView.js  RiftboundCardDetailView.js  SearchView.js  ViewProviders.js
