[workspace]
members = ["models", "retrieval", "gathers", "server", "persistence", "benches"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
enum_dispatch = { version = "0.3.13", features = [] }
eyre = "0.6.12"
futures-util = "0.3.31"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.44"
