[workspace]
members = ["models", "retrieval", "gathers", "server", "persistence", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["query"] }
aide = { version = "0.16.0-alpha.2", features = [
  "axum",
  "axum-json",
  "axum-query",
  "axum-extra",
  "axum-extra-query",
  "swagger",
] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
csv = "1.4.0"
enum_dispatch = "0.3.13"
eyre = "0.6.12"
futures-util = "0.3.31"
hex = "0.4.3"
include_dir = "0.7.4"
indicatif = "0.18"
regex = "1"
reqwest = { version = "0.13.2", features = ["json", "blocking", "stream"] }
rusqlite = "0.38.0"
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
schemars = { version = "1.2", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.11.0-rc.5"
tempfile = "3.24.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = [
  "add-extension",
  "trace",
  "cors",
] }
toml = "0.8"
tracing = "0.1.44"
