[package]
name = "benches"
version = "0.1.0"
edition = "2021"


[[bench]]
name = "card_search_benchmark"
harness = false
path = "src/card_search_benchmark.rs"

[dependencies]
retrieval = { path = "../retrieval" }
models = { path = "../models" }
criterion = { version = "0.8", features = ["html_reports"] }
