[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
retrieval = { path = "../retrieval" }
models = { path = "../models" }
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
table = "0.4"
indicatif = "0.18"
console = "0.16"
sha2 = "0.11.0-rc.5"
hex = "0.4.3"
futures-util.workspace = true
