[package]
name = "gathers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gathers"
path = "src/main.rs"

[dependencies]
retrieval = { path = "../retrieval" }
models = { path = "../models" }
reqwest.workspace = true
tokio.workspace = true
eyre.workspace = true
clap.workspace = true
indicatif = "0.18"
sha2 = "0.11.0-rc.5"
hex = "0.4.3"
futures-util.workspace = true
