[package]
name = "gathers"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gathers"
path = "src/main.rs"

[dependencies]
clap.workspace = true
eyre.workspace = true
models = { path = "../models" }
reqwest.workspace = true
retrieval = { path = "../retrieval" }
tokio.workspace = true
