[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[lib]
name = "persistence"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
chrono.workspace = true
csv = "1.4.0"
enum_dispatch.workspace = true
eyre.workspace = true
models = { path = "../models/" }
retrieval = { path = "../retrieval/" }
include_dir = "0.7.4"
reqwest.workspace = true
rusqlite.workspace = true
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid = { version = "1.0", features = ["v4"] }
