[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[lib]
name = "persistence"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
csv = "1.4.0"
enum_dispatch.workspace = true
eyre.workspace = true
models = { path = "../models/" }
retrieval = { path = "../retrieval/" }
include_dir = "0.7.4"
rusqlite.workspace = true
rusqlite_migration = { version = "2.3.0", features = ["from-directory"] }
serde.workspace = true
tokio.workspace = true
