[package]
name = "persistence"
version.workspace = true
edition.workspace = true

[lib]
name = "persistence"
path = "src/lib.rs"

[dependencies]
chrono.workspace = true
csv.workspace = true
enum_dispatch.workspace = true
eyre.workspace = true
include_dir.workspace = true
models = { path = "../models/" }
retrieval = { path = "../retrieval/" }
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
tokio.workspace = true
