[package]
name = "retrieval"
version = "0.1.0"
edition = "2024"

[lib]
name = "retrieval"
path = "src/lib.rs"

[dependencies]
enum_dispatch.workspace = true
eyre.workspace = true
futures-util.workspace = true
hex = "0.4.3"
indicatif = "0.18"
models = { path = "../models/" }
reqwest.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
sha2 = "0.11.0-rc.5"
tempfile = "3.24.0"
tokio.workspace = true

regex = "1"
serde = { version = "1", features = ["derive"] }
