[package]
name = "retrieval"
version.workspace = true
edition.workspace = true

[lib]
name = "retrieval"
path = "src/lib.rs"

[dependencies]
enum_dispatch.workspace = true
eyre.workspace = true
futures-util.workspace = true
hex.workspace = true
indicatif.workspace = true
models = { path = "../models/" }
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
scraper = "0.22"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strsim = "0.11"
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
