[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
retrieval = { path = "../retrieval" }
models = { path = "../models" }
persistence = { path = "../persistence" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
eyre.workspace = true
clap = { version = "4.5.15", features = ["derive"] }
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["query"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing.workspace = true
